--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 project("monoAtomic_tests"  VERSION 0.1 LANGUAGES CXX)
 
 add_executable(test_maAudioFileWave test_maAudioFileWave.cpp)
+add_executable(test_maAudioDevicePortAudio test_maAudioDevicePortAudio.cpp)
 add_subdirectory("../" monoAtomic)
+add_subdirectory("../include/monoAtomic/portaudio" portaudio)
 
 target_link_libraries(test_maAudioFileWave PRIVATE monoAtomic)
+target_link_libraries(test_maAudioDevicePortAudio PRIVATE monoAtomic PortAudio)
